[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot-plugin-maimaidx"
version = "2.1.11"
authors = [
  { name="Yuri-YuzuChaN", email="806235364@qq.com" },
]
description = "maimaidx plugin for nonebot2"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "nonebot2>=2.0.0,<3.0.0",
    "nonebot-adapter-onebot>=2.2.2,<3.0.0",
    "nonebot-plugin-apscheduler>=0.3.0,<1.0.0",
    "aiofiles>=23.2.1,<25.0.0",
    "httpx>=0.23.1,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pyecharts>=2.0.0,<3.0.0",
    "playwright>=1.52.0",
    "httpx-ws>=0.7.2,<1.0.0",

    "pillow>=10.0.0,<11.0.0; python_version < '3.13'",
    "pillow>=11.0.0,<12.0.0; python_version >= '3.13'",

    "numpy==1.26.0; python_version < '3.10'",
    "numpy>=2.0.0,<3.0.0; python_version >= '3.10'",

    "openai>=1.0.0,<2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Yuri-YuzuChaN/nonebot-plugin-maimaidx"
"Bug Tracker" = "https://github.com/Yuri-YuzuChaN/nonebot-plugin-maimaidx/issues"

[tool.setuptools.package-dir]
"nonebot_plugin_maimaidx" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["command*", "libraries*"]
exclude = ["data*", "static*", "scripts*", "tests*", "build*", "dist*"]

[tool.setuptools.package-data]
"nonebot_plugin_maimaidx" = ["maimaidxhelp.png"]